--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,15 @@
     <string name="email">Email</string>
     <string name="signup_sample">Sign up with sample@sample.com</string>
 
+
+    //Main
+    <string name="shortcuts">Shortcuts</string>
+    <string name="lists">Lists</string>
+    <string name="chats">Chats</string>
+
+    <string name="lists_notif">You have no lists yet</string>
+    <string name="shortcuts_notif">You have no shortcuts yet</string>
+    <string name="chats_notif">You have no chats yet</string>
+    <string name="search_notif">Search for tasks or comments</string>
+
 </resources>
