===Commit Info=== - Added main menu Sockets for Lists and Chats, their back-end realization - Added main menu Sockets for Lists and Chats, their front-end realization, including navigation between fragments, based fully on JetPack's Navigation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="chats_notif">You have no chats yet</string>
     <string name="search_notif">Search for tasks or comments</string>
 
+    //Main Add
+    <string name="add_new">Add new</string>
+
 </resources>
