===Commit Info=== - Added basic Profile UI, that can be opened from Main Menu's Material Toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,10 @@
     //Main Add
     <string name="add_new">Add new</string>
 
+    //Profile
+    <string name="gen_settings">General Settings</string>
+    <string name="backups">Backups</string>
+    <string name="upgrade">Upgrade</string>
+    <string name="imp">Import</string>
+
 </resources>
