--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="shortcuts_notif">You have no shortcuts yet</string>
     <string name="chats_notif">You have no chats yet</string>
     <string name="search_notif">Search for tasks or comments</string>
+    <string name="add_folder">Add Folder</string>
 
     //Main Add
     <string name="add_new">Add new</string>
