- TASKS' METHODS ALL, but they still don't have subtasks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     //Main List
     <string name="users">Users</string>
     <string name="sort">Sort Out</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 
     //Main Task/Comments/Attachments
     <string name="assign_to">Assign To</string>
